# micronos

./: CMakeLists.txt  INSTALL  README.md  configure.cmd  toolchain.cmake
base/: CMakeLists.txt  README.md
boot/: CMakeLists.txt
boot/arch/arm32/: CMakeLists.txt  bcm2836.dts  linker.ld
boot/arch/arm32/include/: asm.h  cp15.h  framebuffer.h  gpu.h  mailbox.h  peripheral.h  uart.h
boot/arch/arm32/src/: asm.S  framebuffer.c  gpu.c  kerio.c  mailbox.c  main.c  mem.c  mm.c  putchar.c  uart.c
boot/arch/arm32/src/common/: stdlib.c
boot/arch/riscv32/: CMakeLists.txt
kernel/: README.md  kernel.c
tests/: create_disk.cmd  kernel.elf  kernel.img  run.cmd
